<resources>
    <string name="app_name">Conway\'s Game of Life Game</string>

    <!-- Main Activity -->
    <string name="startgame_text">Start Game</string>
    <string name="tutorial_text">Tutorial</string>
    <string name="settings_text">Settings</string>
    <string name="title1">Conway\'s Game of Life</string>
    <string name="title2">The Game</string>
    <string name="footer_text">Created by Moritz Fink</string>
    <!-- Config Activity -->
    <string name="back_text">Back</string>
    <string name="play_text">Play</string>
    <string name="rules_text">Rules</string>
    <string name="cells_text">Cells</string>
    <string name="neighbours_text">Neighbours</string>
    <string name="result_text">Rule</string>
    <string name="zero_text">0</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="voidPercentText">Void: 10%</string>
    <string name="voidPercentTextTemplate">Void: %1$d%%</string>
    <string name="sizePercentText">Size: 10\u292B10</string>
    <string name="sizePercentTextTemplate">Size: %1$d\u292B%2$d</string>
    <!-- Game Activity -->
    <string name="title_activity_game">GameActivity</string>
    <string name="menuText">Menu</string>
    <string name="nextTurnText">Next Turn</string>
    <string name="resumeText">Resume</string>
    <string name="concedeText">Concede</string>
</resources>
